Implement custom switch

--- a/common/src/main/res/layout/custom_switch.xml
+++ b/common/src/main/res/layout/custom_switch.xml
@@ -17,7 +17,7 @@
             android:id="@+id/switch_thumb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
+            android:layout_gravity="start"
             android:src="@drawable/custom_switch_thumb" />
     </FrameLayout>
 
