--- a/commonStyles/src/main/res/values/dimens.xml
+++ b/commonStyles/src/main/res/values/dimens.xml
@@ -47,4 +47,5 @@
     <dimen name="elevation_small">2dp</dimen>
     <dimen name="elevation_medium">4dp</dimen>
     <dimen name="elevation_large">8dp</dimen>
+    <dimen name="standard_compound_button_min_height">60dp</dimen>
 </resources>
