--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -153,6 +153,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/colorGreySeparator"
+            android:layout_marginTop="@dimen/margin_large"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
 
