--- a/app/src/main/res/layout/common_header_layout.xml
+++ b/app/src/main/res/layout/common_header_layout.xml
@@ -15,6 +15,7 @@
             android:layout_marginStart="@dimen/margin_large"
             android:fontFamily="@font/monserrat_bold"
             android:lineHeight="24dp"
+            app:layout_constraintBottom_toTopOf="@+id/viewTitleSeparator"
             android:text="@string/shop"
             android:textColor="@color/dark_shade"
             android:textSize="17sp"
@@ -29,6 +30,7 @@
             android:layout_height="23dp"
             android:layout_marginTop="@dimen/margin_large"
             android:layout_marginEnd="@dimen/margin_large"
+            android:layout_marginBottom="@dimen/margin_large"
             android:src="@drawable/ic_cart"
             app:layout_constraintBottom_toTopOf="@+id/viewTitleSeparator"
             app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +58,8 @@
             android:layout_height="2dp"
             android:layout_marginTop="@dimen/margin_medium"
             android:background="@color/black"
-            app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
+
+            app:layout_constraintTop_toBottomOf="@+id/icCart" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/txtDescription"
@@ -65,6 +68,7 @@
             android:layout_marginStart="@dimen/margin_large"
             android:fontFamily="@font/monserrat_bold"
             android:lineHeight="32dp"
+            android:layout_marginTop="@dimen/margin_large"
             android:textColor="@color/dark_shade"
             android:textSize="27sp"
             android:textStyle="bold"
