--- a/app/src/main/res/layout/fragment_list_cart.xml
+++ b/app/src/main/res/layout/fragment_list_cart.xml
@@ -25,6 +25,7 @@
                     android:layout_height="0dp"
                     android:clipToPadding="false"
                     android:paddingBottom="200dp"
+                    android:layout_marginTop="@dimen/margin_large"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintBottom_toTopOf="@+id/txtCartTotal"
                     app:layout_constraintEnd_toEndOf="parent"
