Fix padding in top checkout screen

--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -10,7 +10,7 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/txtYourName"
             android:layout_width="wrap_content"
-
+            android:layout_marginTop="@dimen/margin_large"
             android:layout_height="wrap_content"
             android:fontFamily="@font/monserrat_bold"
 
