--- a/app/src/main/res/layout/fragment_order_confirmation.xml
+++ b/app/src/main/res/layout/fragment_order_confirmation.xml
@@ -13,7 +13,7 @@
             android:layout_height="228dp"
             app:cardCornerRadius="12dp"
             android:layout_marginHorizontal="@dimen/margin_large"
-            android:layout_marginTop="@dimen/margin_xxlarge"
+            android:layout_marginTop="@dimen/margin_xxxlarge"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
