--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -88,11 +88,24 @@
         <com.products.presentation.utils.CustomSwitch
             android:id="@+id/customSwitch"
             android:layout_width="60dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_large"
             android:layout_marginTop="@dimen/margin_xlarge"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputYourEmailLayout" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:fontFamily="@font/monserrat_bold"
+            android:lineHeight="16dp"
+            android:text="@string/terms_and_condition"
+            android:textColor="@color/dark_shade"
+            android:textSize="12dp"
+            app:layout_constraintBottom_toBottomOf="@+id/customSwitch"
+            app:layout_constraintStart_toEndOf="@+id/customSwitch"
+            app:layout_constraintTop_toTopOf="@+id/customSwitch" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnPay"
